--- a/Webpage/index.html
+++ b/Webpage/index.html
@@ -4,17 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Courbet Custom ROM — custom Android builds and step-by-step flashing guides for supported devices.">
+    <meta property="og:title" content="Courbet Custom ROM">
+    <meta property="og:description" content="Custom Android ROMs, downloads, and flashing guides.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="">
+    <meta name="theme-color" content="#050505">
     <title>Courbet Custom ROM | Experience Perfection</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="preload" href="favicon.ico" as="image">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preload" href="style.css" as="style">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <nav class="navbar">
+    <a class="skip-link" href="#main-content">Skip to content</a>
+    <nav class="navbar" role="navigation" aria-label="Main navigation">
         <div class="logo">Courbet ROM</div>
-        <div class="nav-links">
+        <button class="nav-toggle" aria-controls="primary-navigation" aria-expanded="false" aria-label="Open menu">
+            <span class="hamburger" aria-hidden="true"></span>
+        </button>
+        <div id="primary-navigation" class="nav-links">
             <a href="#home">Home</a>
             <a href="#roms">Custom ROMs</a>
             <a href="flashing_guide.html">Guide</a>
@@ -23,7 +36,7 @@
         <a href="#roms" class="nav-cta">Get Started</a>
     </nav>
 
-    <main>
+    <main id="main-content">
         <section id="home" class="hero-section">
             <div class="hero-content">
                 <div class="badge">New Release Available</div>
